--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -19,6 +19,9 @@
             </form>
           </div>
         </div>
+        <div class="mt-3">
+            <a routerLink="/signup" class="btn btn-link">Register</a>
+        </div>
       </div>
     </div>
   </div>
