--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,28 +1,30 @@
 <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-header">
-            Login
-          </div>
-          <div class="card-body">
-            <form [formGroup]="loginForm" (ngSubmit)="login()">
-              <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" formControlName="username" required>
-              </div>
-              <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" formControlName="password" required>
-              </div>
-              <button type="submit" class="btn btn-primary">Login</button>
-            </form>
-          </div>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header text-center">
+          <h4>Login</h4>
         </div>
-        <div class="mt-3">
-            <a routerLink="/signup" class="btn btn-link">Register</a>
+        <div class="card-body">
+          <form [formGroup]="loginForm" (ngSubmit)="login()">
+            <div class="form-group">
+              <label for="username">Username</label>
+              <input type="text" class="form-control" id="username" formControlName="username" required>
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" id="password" formControlName="password" required>
+            </div>
+            <div class="form-group text-center">
+              <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+          </form>
+          <hr>
+          <div class="text-center">
+            <button type="button" class="btn btn-secondary" (click)="goToSignup()">Register</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
