--- a/frontend/src/app/create/create.component.html
+++ b/frontend/src/app/create/create.component.html
@@ -1,1 +1,27 @@
-<p>create works!</p>
+<h2>Create Employee</h2>
+<form [formGroup]="createForm" (ngSubmit)="onSubmit()">
+  <div>
+    <label for="firstName">First Name</label>
+    <input type="text" id="firstName" name="firstName" formControlName="firstName">
+  </div>
+  <div>
+    <label for="lastName">Last Name</label>
+    <input type="text" id="lastName" name="lastName" formControlName="lastName">
+  </div>
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" formControlName="email">
+  </div>
+  <div>
+    <label for="gender">Gender</label>
+    <select id="gender" name="gender" formControlName="gender">
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+    </select>
+  </div>
+  <div>
+    <label for="salary">Salary</label>
+    <input type="number" id="salary" name="salary" formControlName="salary">
+  </div>
+  <button type="submit">Create</button>
+</form>
