--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <app-signup></app-signup>
-<app-login></app-login> -->
-<!-- <app-create></app-create> -->
-<app-list></app-list>
-<app-add><app-add>
+  <app-signup></app-signup>
+<!-- <app-login></app-login>   -->
+<!-- <app-create></app-create>  -->
+<!-- <app-list></app-list> -->
+<!-- <app-add><app-add> -->
 <router-outlet></router-outlet>
