--- a/frontend/src/app/create/create.component.css
+++ b/frontend/src/app/create/create.component.css
@@ -1,32 +1,59 @@
-h2 {
-    color: blue;
-  }
-  form {
+.container {
     display: flex;
-    flex-direction: column;
-    width: 30%;
-    margin: auto;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
   }
-  div {
-    margin: 10px;
+  
+  .card {
+    border: 1px solid #dcdcdc;
+    border-radius: 5px;
+    width: 400px;
+    background-color: #fff;
   }
+  
+  .card-header {
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #dcdcdc;
+    border-radius: 5px 5px 0 0;
+    font-size: 1.2rem;
+    font-weight: bold;
+    padding: 10px;
+  }
+  
+  .card-body {
+    padding: 20px;
+  }
+  
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
   label {
     font-weight: bold;
   }
-  input[type=text], input[type=email], select, input[type=number] {
-    width: 100%;
+  
+  input[type="text"],
+  input[type="password"] {
+    border: 1px solid #dcdcdc;
+    border-radius: 3px;
     padding: 10px;
-    border: 1px solid gray;
-    border-radius: 4px;
-    box-sizing: border-box;
+    width: 100%;
   }
-  button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    margin: 10px 0;
+  
+  button[type="submit"] {
+    background-color: #007bff;
     border: none;
-    border-radius: 4px;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: bold;
+    padding: 10px;
+    width: 100%;
     cursor: pointer;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: #0069d9;
   }
   
