--- a/frontend/src/app/create/create.component.html
+++ b/frontend/src/app/create/create.component.html
@@ -1,3 +1,5 @@
+<div class="container">
+    <div class="box">
 <h2>Create Employee</h2>
 <form [formGroup]="createForm" (ngSubmit)="onSubmit()">
   <div>
@@ -25,3 +27,5 @@
   </div>
   <button type="submit">Create</button>
 </form>
+</div>  
+</div>
