--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,10 +1,15 @@
 .container {
-  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .card {
   border: 1px solid #dcdcdc;
   border-radius: 5px;
+  width: 400px;
+  background-color: #fff;
 }
 
 .card-header {
@@ -45,9 +50,9 @@ button[type="submit"] {
   font-weight: bold;
   padding: 10px;
   width: 100%;
+  cursor: pointer;
 }
 
 button[type="submit"]:hover {
   background-color: #0069d9;
-  cursor: pointer;
 }
