--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,15 +1,22 @@
-<form #signupForm="ngForm" (ngSubmit)="onSubmit()">
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required [(ngModel)]="formData.email" #emailInput="ngModel">
-      <div *ngIf="emailInput.errors?.['required']">Email is required</div>
-      <div *ngIf="emailInput.errors?.['email']">Email must be a valid email address</div>
+<div class="container">
+  <div class="card">
+    <div class="card-header">Sign Up</div>
+    <div class="card-body">
+      <form #signupForm="ngForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required [(ngModel)]="formData.email" #emailInput="ngModel">
+          <div *ngIf="emailInput.errors?.['required']">Email is required</div>
+          <div *ngIf="emailInput.errors?.['email']">Email must be a valid email address</div>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required minlength="6" [(ngModel)]="formData.password" #passwordInput="ngModel">
+          <div *ngIf="passwordInput.errors?.['required']">Password is required</div>
+          <div *ngIf="passwordInput.errors?.['minlength']">Password must be at least 6 characters long</div>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
   </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required minlength="6" [(ngModel)]="formData.password" #passwordInput="ngModel">
-      <div *ngIf="passwordInput.errors?.['required']">Password is required</div>
-      <div *ngIf="passwordInput.errors?.['minlength']">Password must be at least 6 characters long</div>
-  </div>
-  <button type="submit">Submit</button>
-</form>
+</div>
