--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-  <app-signup></app-signup>
+  <!-- <app-signup></app-signup> -->
 <!-- <app-login></app-login>   -->
 <!-- <app-create></app-create>  -->
 <!-- <app-list></app-list> -->
