--- a/frontend/src/app/list/list.component.html
+++ b/frontend/src/app/list/list.component.html
@@ -8,16 +8,22 @@
       <th>Email</th>
       <th>Gender</th>
       <th>Salary</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let employee of employees$ | async">
+    <tr *ngFor="let employee of employees">
       <td>{{ employee.id }}</td>
       <td>{{ employee.firstName }}</td>
       <td>{{ employee.lastName }}</td>
       <td>{{ employee.email }}</td>
       <td>{{ employee.gender }}</td>
       <td>{{ employee.salary }}</td>
+      <td>
+        <button (click)="editEmployee(employee.id)">Edit</button>
+        <button (click)="viewEmployee(employee.id)">View</button>
+        <button (click)="deleteEmployee(employee.id)">Delete</button>
+      </td>
     </tr>
   </tbody>
 </table>
